--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "mini-vue3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/guide-mini-vue3.cjs.js",
+  "module": "lib/guide-mini-vue3.esm.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^27.5.1",
     "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
+    "rollup": "^2.75.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.4"
   }
 }
